--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+Download student materials/.DS_Store
+Download student materials/2-Algorithms/.DS_Store
+.DS_Store
